<resources>
    <string name="app_name">Student SI</string>
    <string name="title_activity_login_adm">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="TextCPF">CPF:</string>
    <string name="textSenha">Senha:</string>
    <string name="textNome">Nome:</string>
    <string name="confirmar">Confirmar</string>
    <string name="cadastre_se">Cadastre-se!</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="discente">Discente</string>
    <string name="docente">Docente</string>
    <string name="adminitrador">Adminitrador</string>
    <string name="quem_voc">Quem é você?</string>
</resources>
